--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   </head>
   <body>
     <div class="nav-container">
-      <a class="nav" href="#">About Me</a>
-      <a class="nav" href="#">Skills</a>
+      <a class="nav" href="#middle-container">About Me</a>
+      <a class="nav" href="#skills">Skills</a>
       <a class="nav" href="#contact-me">Contact</a>
     </div>
     <div class="top">
@@ -25,14 +25,14 @@
       <img class="bottom-cloud" src="images/cloud.png" alt="cloud-image">
       <img src="images/mountain.png" alt="mountain-image">
     </div>
-    <div class="middle-container">
+    <div id="middle-container" class="middle-container">
       <div class="profile">
-        <img src="images/Anitha.png" alt="Anitha - Image">
+        <img src="images/girl.png" alt="Girl - Image">
         <h2>Hello.</h2>
         <p class="intro">I am a web developer. I would like to develop attractive websites with good functionalities. </p>
       </div>
       <hr>
-      <div class="skills">
+      <div id="skills" class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row">
           <img class="skill-img1" src="images/Computer-code.png"  alt="Computer image">
