--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
     <div id="middle-container" class="middle-container">
       <div class="profile">
-        <img src="images/girl.png" alt="Girl - Image">
+        <img src="images/girl.png" width="100px" height="100px" alt="Girl - Image">
         <h2>Hello.</h2>
         <p class="intro">I am a web developer. I would like to develop attractive websites with good functionalities. </p>
       </div>
